--- a/index.html
+++ b/index.html
@@ -113,6 +113,66 @@
             <a href="https://file.ipaomtk.com/ipa/Subway-Surfers-ipaomtk.com.ipa" class="download-btn" download>Download IPA</a>
         </div>
 
+        <!-- Scarlet -->
+        <div class="ipa-card">
+            <h2>Scarlet</h2>
+            <p>Advanced IPA installer and app manager.</p>
+            <a href="https://raw.githubusercontent.com/coolzyycmon/IPAs/main/ScarletAlpha.ipa" class="download-btn" download>Download IPA</a>
+        </div>
+
+        <!-- ESign -->
+        <div class="ipa-card">
+            <h2>ESign</h2>
+            <p>IPA signer and sideloading tool with no logs.</p>
+            <a href="https://raw.githubusercontent.com/coolzyycmon/IPAs/main/ESignNoLogs-5.0-1.1.ipa" class="download-btn" download>Download IPA</a>
+        </div>
+
+        <!-- ChatGPT -->
+        <div class="ipa-card">
+            <h2>ChatGPT</h2>
+            <p>AI-powered chatbot app.</p>
+            <a href="https://raw.githubusercontent.com/coolzyycmon/IPAs/main/ChatGPT_1.0_1750971508.ipa" class="download-btn" download>Download IPA</a>
+        </div>
+
+        <!-- TrollInstallerX -->
+        <div class="ipa-card">
+            <h2>TrollInstallerX</h2>
+            <p>Utility for installing TrollStore easily.</p>
+            <a href="https://raw.githubusercontent.com/coolzyycmon/IPAs/main/TrollInstallerX.ipa" class="download-btn" download>Download IPA</a>
+        </div>
+
+        <!-- GTA San Andreas -->
+        <div class="ipa-card">
+            <h2>GTA: San Andreas</h2>
+            <p>Classic Rockstar action-adventure game.</p>
+            <a href="https://file.ipaomtk.com/ipa/GTA-San-Andreas-ipaomtk.com.ipa" class="download-btn" download>Normal</a>
+            <a href="https://s1.ipaomtk.com/ipa/GTA-SA-Original.ipa" class="download-btn" download>Original</a>
+            <a href="https://s1.ipaomtk.com/ipa/GTASA-MOD-IPAOMTK.COM.ipa" class="download-btn" download>Mod</a>
+            <a href="https://file.ipaomtk.com/ipa/GTA-SA-MOD-HD.ipa" class="download-btn" download>HD</a>
+            <a href="https://file.ipaomtk.com/ipa/GTA-SA-Definitive-ipaomtk.com.ipa" class="download-btn" download>Definitive</a>
+        </div>
+
+        <!-- Shadow Fight 2 -->
+        <div class="ipa-card">
+            <h2>Shadow Fight 2</h2>
+            <p>Martial arts fighting game with RPG elements.</p>
+            <a href="https://file.ipaomtk.com/ipa/Shadow-Fight-2.ipa" class="download-btn" download>Download IPA</a>
+        </div>
+
+        <!-- StepsApp -->
+        <div class="ipa-card">
+            <h2>StepsApp Pedometer</h2>
+            <p>Fitness tracker and pedometer app. Version 8.4.4</p>
+            <a href="https://s1.ipaomtk.com/ipa/StepsApp-Pedometer-IPAOMTK.COM.ipa" class="download-btn" download>Download IPA</a>
+        </div>
+
+        <!-- Spotify -->
+        <div class="ipa-card">
+            <h2>Spotify Music</h2>
+            <p>Music streaming app with millions of songs.</p>
+            <a href="https://file.ipaomtk.com/ipa/Spotify-ipaomtk.com.ipa" class="download-btn" download>Download IPA</a>
+        </div>
+
         <!-- Telegram Request -->
         <div style="text-align: center;">
             <a href="https://t.me/GalaticIPA" class="telegram-btn">📲 Request IPA on Telegram</a>
