--- a/index.html
+++ b/index.html
@@ -4,94 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GalacticIPA</title>
+
+    <!-- Google AdSense Site Verification -->
+    <meta name="google-site-verification" content="YOUR_ADSENSE_VERIFICATION_CODE">
+
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #121212;
-            color: #ffffff;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #1f1f1f;
-            padding: 20px;
-            text-align: center;
-            font-size: 2em;
-            font-weight: bold;
-        }
-        .container {
-            max-width: 900px;
-            margin: 40px auto;
-            padding: 0 20px;
-        }
-        #searchBar {
-            width: 100%;
-            padding: 12px;
-            margin-bottom: 30px;
-            border-radius: 8px;
-            border: none;
-            font-size: 1em;
-        }
-        .ipa-card {
-            background-color: #1f1f1f;
-            padding: 20px;
-            margin-bottom: 20px;
-            border-radius: 8px;
-            text-align: center;
-            transition: transform 0.2s;
-        }
-        .ipa-card:hover {
-            transform: scale(1.02);
-        }
-        .ipa-card h2 {
-            margin: 0 0 10px 0;
-        }
-        .ipa-card p {
-            margin: 0 0 15px 0;
-            font-size: 0.9em;
-            color: #bbbbbb;
-        }
-        .download-btn {
-            display: inline-block;
-            margin: 5px;
-            text-decoration: none;
-            background-color: #ff3b3f;
-            color: white;
-            padding: 10px 20px;
-            border-radius: 5px;
-            font-weight: bold;
-        }
-        .download-btn:hover {
-            background-color: #e03236;
-        }
-        .telegram-btn {
-            display: inline-block;
-            margin-top: 20px;
-            text-decoration: none;
-            background-color: #0088cc;
-            color: white;
-            padding: 12px 25px;
-            border-radius: 8px;
-            font-weight: bold;
-        }
-        .telegram-btn:hover {
-            background-color: #0077b5;
-        }
-        footer {
-            text-align: center;
-            padding: 20px;
-            color: #888888;
-            background-color: #1f1f1f;
-            margin-top: 40px;
-        }
+        body { font-family: Arial, sans-serif; background-color: #121212; color: #ffffff; margin:0; padding:0; }
+        header { background-color:#1f1f1f; padding:20px; text-align:center; font-size:2em; font-weight:bold; }
+        .container { max-width:900px; margin:40px auto; padding:0 20px; }
+        #searchBar { width:100%; padding:12px; margin-bottom:30px; border-radius:8px; border:none; font-size:1em; }
+        .ipa-card { background-color:#1f1f1f; padding:20px; margin-bottom:20px; border-radius:8px; text-align:center; transition: transform 0.2s; }
+        .ipa-card:hover { transform: scale(1.02); }
+        .ipa-card h2 { margin:0 0 10px 0; }
+        .ipa-card p { margin:0 0 15px 0; font-size:0.9em; color:#bbbbbb; }
+        .download-btn { display:inline-block; margin:5px; text-decoration:none; background-color:#ff3b3f; color:white; padding:10px 20px; border-radius:5px; font-weight:bold; }
+        .download-btn:hover { background-color:#e03236; }
+        .telegram-btn { display:inline-block; margin-top:20px; text-decoration:none; background-color:#0088cc; color:white; padding:12px 25px; border-radius:8px; font-weight:bold; }
+        .telegram-btn:hover { background-color:#0077b5; }
+        footer { text-align:center; padding:20px; color:#888888; background-color:#1f1f1f; margin-top:40px; }
+        .ad-container { margin:30px 0; text-align:center; }
     </style>
+
+    <!-- Google AdSense script -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2445144635895709" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>GalacticIPA</header>
     <div class="container">
         <input type="text" id="searchBar" onkeyup="searchIPA()" placeholder="Search for IPAs...">
 
-        <!-- CapCut -->
+        <!-- Ad Placeholder -->
+        <div class="ad-container">
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-2445144635895709"
+                 data-ad-slot="1234567890"
+                 data-ad-format="auto"
+                 data-full-width-responsive="true"></ins>
+            <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+        </div>
+
+        <!-- All IPA Cards -->
         <div class="ipa-card">
             <h2>CapCut</h2>
             <p>Video editor with powerful features for editing, effects, and more.</p>
@@ -99,49 +52,42 @@
             <a href="https://file.ipaomtk.com/ipa/CapCut-2-IPAOMTK.COM.ipa" class="download-btn" download>Download v2</a>
         </div>
 
-        <!-- Minecraft -->
         <div class="ipa-card">
             <h2>Minecraft</h2>
             <p>The legendary block-building survival and adventure game.</p>
             <a href="https://s1.ipaomtk.com/ipa/Minecraft-IPAOMTK.COM.ipa" class="download-btn" download>Download IPA</a>
         </div>
 
-        <!-- Subway Surfers -->
         <div class="ipa-card">
             <h2>Subway Surfers</h2>
             <p>Endless runner game where you dash through subways and dodge trains.</p>
             <a href="https://file.ipaomtk.com/ipa/Subway-Surfers-ipaomtk.com.ipa" class="download-btn" download>Download IPA</a>
         </div>
 
-        <!-- Scarlet -->
         <div class="ipa-card">
             <h2>Scarlet</h2>
             <p>Advanced IPA installer and app manager.</p>
             <a href="https://raw.githubusercontent.com/coolzyycmon/IPAs/main/ScarletAlpha.ipa" class="download-btn" download>Download IPA</a>
         </div>
 
-        <!-- ESign -->
         <div class="ipa-card">
             <h2>ESign</h2>
             <p>IPA signer and sideloading tool with no logs.</p>
             <a href="https://raw.githubusercontent.com/coolzyycmon/IPAs/main/ESignNoLogs-5.0-1.1.ipa" class="download-btn" download>Download IPA</a>
         </div>
 
-        <!-- ChatGPT -->
         <div class="ipa-card">
             <h2>ChatGPT</h2>
             <p>AI-powered chatbot app.</p>
             <a href="https://raw.githubusercontent.com/coolzyycmon/IPAs/main/ChatGPT_1.0_1750971508.ipa" class="download-btn" download>Download IPA</a>
         </div>
 
-        <!-- TrollInstallerX -->
         <div class="ipa-card">
             <h2>TrollInstallerX</h2>
             <p>Utility for installing TrollStore easily.</p>
             <a href="https://raw.githubusercontent.com/coolzyycmon/IPAs/main/TrollInstallerX.ipa" class="download-btn" download>Download IPA</a>
         </div>
 
-        <!-- GTA San Andreas -->
         <div class="ipa-card">
             <h2>GTA: San Andreas</h2>
             <p>Classic Rockstar action-adventure game.</p>
@@ -152,28 +98,24 @@
             <a href="https://file.ipaomtk.com/ipa/GTA-SA-Definitive-ipaomtk.com.ipa" class="download-btn" download>Definitive</a>
         </div>
 
-        <!-- Shadow Fight 2 -->
         <div class="ipa-card">
             <h2>Shadow Fight 2</h2>
             <p>Martial arts fighting game with RPG elements.</p>
             <a href="https://file.ipaomtk.com/ipa/Shadow-Fight-2.ipa" class="download-btn" download>Download IPA</a>
         </div>
 
-        <!-- StepsApp -->
         <div class="ipa-card">
             <h2>StepsApp Pedometer</h2>
             <p>Fitness tracker and pedometer app. Version 8.4.4</p>
             <a href="https://s1.ipaomtk.com/ipa/StepsApp-Pedometer-IPAOMTK.COM.ipa" class="download-btn" download>Download IPA</a>
         </div>
 
-        <!-- Spotify -->
         <div class="ipa-card">
             <h2>Spotify Music</h2>
             <p>Music streaming app with millions of songs.</p>
             <a href="https://file.ipaomtk.com/ipa/Spotify-ipaomtk.com.ipa" class="download-btn" download>Download IPA</a>
         </div>
 
-        <!-- Telegram Request -->
         <div style="text-align: center;">
             <a href="https://t.me/GalaticIPA" class="telegram-btn">📲 Request IPA on Telegram</a>
         </div>
@@ -187,15 +129,10 @@
         function searchIPA() {
             let input = document.getElementById('searchBar').value.toLowerCase();
             let cards = document.getElementsByClassName('ipa-card');
-
             for (let i = 0; i < cards.length; i++) {
                 let title = cards[i].getElementsByTagName('h2')[0].innerText.toLowerCase();
                 let desc = cards[i].getElementsByTagName('p')[0].innerText.toLowerCase();
-                if (title.includes(input) || desc.includes(input)) {
-                    cards[i].style.display = "";
-                } else {
-                    cards[i].style.display = "none";
-                }
+                cards[i].style.display = (title.includes(input) || desc.includes(input)) ? "" : "none";
             }
         }
     </script>
