--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>GalacticIPA</title>
 
     <!-- Google AdSense Site Verification -->
-    <meta name="google-site-verification" content="YOUR_ADSENSE_VERIFICATION_CODE">
+    <meta name="google-site-verification" content="2445144635895709">
+
+    <!-- Google AdSense Script (exactly as provided) -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2445144635895709"
+     crossorigin="anonymous"></script>
 
     <style>
         body { font-family: Arial, sans-serif; background-color: #121212; color: #ffffff; margin:0; padding:0; }
@@ -24,27 +28,24 @@
         footer { text-align:center; padding:20px; color:#888888; background-color:#1f1f1f; margin-top:40px; }
         .ad-container { margin:30px 0; text-align:center; }
     </style>
-
-    <!-- Google AdSense script -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2445144635895709" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>GalacticIPA</header>
     <div class="container">
         <input type="text" id="searchBar" onkeyup="searchIPA()" placeholder="Search for IPAs...">
 
-        <!-- Ad Placeholder -->
+        <!-- Ad Placement 1 -->
         <div class="ad-container">
             <ins class="adsbygoogle"
                  style="display:block"
                  data-ad-client="ca-pub-2445144635895709"
-                 data-ad-slot="1234567890"
+                 data-ad-slot="1111111111"
                  data-ad-format="auto"
                  data-full-width-responsive="true"></ins>
             <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
         </div>
 
-        <!-- All IPA Cards -->
+        <!-- IPA Cards -->
         <div class="ipa-card">
             <h2>CapCut</h2>
             <p>Video editor with powerful features for editing, effects, and more.</p>
@@ -68,6 +69,17 @@
             <h2>Scarlet</h2>
             <p>Advanced IPA installer and app manager.</p>
             <a href="https://raw.githubusercontent.com/coolzyycmon/IPAs/main/ScarletAlpha.ipa" class="download-btn" download>Download IPA</a>
+        </div>
+
+        <!-- Ad Placement 2 -->
+        <div class="ad-container">
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-2445144635895709"
+                 data-ad-slot="2222222222"
+                 data-ad-format="auto"
+                 data-full-width-responsive="true"></ins>
+            <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
         </div>
 
         <div class="ipa-card">
@@ -116,7 +128,18 @@
             <a href="https://file.ipaomtk.com/ipa/Spotify-ipaomtk.com.ipa" class="download-btn" download>Download IPA</a>
         </div>
 
-        <div style="text-align: center;">
+        <!-- Ad Placement 3: Bottom -->
+        <div class="ad-container">
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-2445144635895709"
+                 data-ad-slot="3333333333"
+                 data-ad-format="auto"
+                 data-full-width-responsive="true"></ins>
+            <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+        </div>
+
+        <div style="text-align:center;">
             <a href="https://t.me/GalaticIPA" class="telegram-btn">📲 Request IPA on Telegram</a>
         </div>
     </div>
