--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Google AdSense Site Verification -->
     <meta name="google-site-verification" content="2445144635895709">
 
-    <!-- Google AdSense Script (exactly as provided) -->
+    <!-- Google AdSense Script -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2445144635895709"
      crossorigin="anonymous"></script>
 
@@ -45,30 +45,78 @@
             <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
         </div>
 
-        <!-- IPA Cards -->
-        <div class="ipa-card">
-            <h2>CapCut</h2>
-            <p>Video editor with powerful features for editing, effects, and more.</p>
-            <a href="https://file.ipaomtk.com/ipa/CapCut.ipa" class="download-btn" download>Download v1</a>
-            <a href="https://file.ipaomtk.com/ipa/CapCut-2-IPAOMTK.COM.ipa" class="download-btn" download>Download v2</a>
-        </div>
+        <!-- IPA cards container -->
+        <div id="ipa-cards-container">
+            <div class="ipa-card">
+                <h2>CapCut</h2>
+                <p>Video editor with powerful features for editing, effects, and more.</p>
+                <a href="https://file.ipaomtk.com/ipa/CapCut.ipa" class="download-btn" download>Download v1</a>
+                <a href="https://file.ipaomtk.com/ipa/CapCut-2-IPAOMTK.COM.ipa" class="download-btn" download>Download v2</a>
+            </div>
 
-        <div class="ipa-card">
-            <h2>Minecraft</h2>
-            <p>The legendary block-building survival and adventure game.</p>
-            <a href="https://s1.ipaomtk.com/ipa/Minecraft-IPAOMTK.COM.ipa" class="download-btn" download>Download IPA</a>
-        </div>
+            <div class="ipa-card">
+                <h2>Minecraft</h2>
+                <p>The legendary block-building survival and adventure game.</p>
+                <a href="https://s1.ipaomtk.com/ipa/Minecraft-IPAOMTK.COM.ipa" class="download-btn" download>Download IPA</a>
+            </div>
 
-        <div class="ipa-card">
-            <h2>Subway Surfers</h2>
-            <p>Endless runner game where you dash through subways and dodge trains.</p>
-            <a href="https://file.ipaomtk.com/ipa/Subway-Surfers-ipaomtk.com.ipa" class="download-btn" download>Download IPA</a>
-        </div>
+            <div class="ipa-card">
+                <h2>Subway Surfers</h2>
+                <p>Endless runner game where you dash through subways and dodge trains.</p>
+                <a href="https://file.ipaomtk.com/ipa/Subway-Surfers-ipaomtk.com.ipa" class="download-btn" download>Download IPA</a>
+            </div>
 
-        <div class="ipa-card">
-            <h2>Scarlet</h2>
-            <p>Advanced IPA installer and app manager.</p>
-            <a href="https://raw.githubusercontent.com/coolzyycmon/IPAs/main/ScarletAlpha.ipa" class="download-btn" download>Download IPA</a>
+            <div class="ipa-card">
+                <h2>Scarlet</h2>
+                <p>Advanced IPA installer and app manager.</p>
+                <a href="https://raw.githubusercontent.com/coolzyycmon/IPAs/main/ScarletAlpha.ipa" class="download-btn" download>Download IPA</a>
+            </div>
+
+            <div class="ipa-card">
+                <h2>ESign</h2>
+                <p>IPA signer and sideloading tool with no logs.</p>
+                <a href="https://raw.githubusercontent.com/coolzyycmon/IPAs/main/ESignNoLogs-5.0-1.1.ipa" class="download-btn" download>Download IPA</a>
+            </div>
+
+            <div class="ipa-card">
+                <h2>ChatGPT</h2>
+                <p>AI-powered chatbot app.</p>
+                <a href="https://raw.githubusercontent.com/coolzyycmon/IPAs/main/ChatGPT_1.0_1750971508.ipa" class="download-btn" download>Download IPA</a>
+            </div>
+
+            <div class="ipa-card">
+                <h2>TrollInstallerX</h2>
+                <p>Utility for installing TrollStore easily.</p>
+                <a href="https://raw.githubusercontent.com/coolzyycmon/IPAs/main/TrollInstallerX.ipa" class="download-btn" download>Download IPA</a>
+            </div>
+
+            <div class="ipa-card">
+                <h2>GTA: San Andreas</h2>
+                <p>Classic Rockstar action-adventure game.</p>
+                <a href="https://file.ipaomtk.com/ipa/GTA-San-Andreas-ipaomtk.com.ipa" class="download-btn" download>Normal</a>
+                <a href="https://s1.ipaomtk.com/ipa/GTA-SA-Original.ipa" class="download-btn" download>Original</a>
+                <a href="https://s1.ipaomtk.com/ipa/GTASA-MOD-IPAOMTK.COM.ipa" class="download-btn" download>Mod</a>
+                <a href="https://file.ipaomtk.com/ipa/GTA-SA-MOD-HD.ipa" class="download-btn" download>HD</a>
+                <a href="https://file.ipaomtk.com/ipa/GTA-SA-Definitive-ipaomtk.com.ipa" class="download-btn" download>Definitive</a>
+            </div>
+
+            <div class="ipa-card">
+                <h2>Shadow Fight 2</h2>
+                <p>Martial arts fighting game with RPG elements.</p>
+                <a href="https://file.ipaomtk.com/ipa/Shadow-Fight-2.ipa" class="download-btn" download>Download IPA</a>
+            </div>
+
+            <div class="ipa-card">
+                <h2>StepsApp Pedometer</h2>
+                <p>Fitness tracker and pedometer app. Version 8.4.4</p>
+                <a href="https://s1.ipaomtk.com/ipa/StepsApp-Pedometer-IPAOMTK.COM.ipa" class="download-btn" download>Download IPA</a>
+            </div>
+
+            <div class="ipa-card">
+                <h2>Spotify Music</h2>
+                <p>Music streaming app with millions of songs.</p>
+                <a href="https://file.ipaomtk.com/ipa/Spotify-ipaomtk.com.ipa" class="download-btn" download>Download IPA</a>
+            </div>
         </div>
 
         <!-- Ad Placement 2 -->
@@ -82,53 +130,7 @@
             <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
         </div>
 
-        <div class="ipa-card">
-            <h2>ESign</h2>
-            <p>IPA signer and sideloading tool with no logs.</p>
-            <a href="https://raw.githubusercontent.com/coolzyycmon/IPAs/main/ESignNoLogs-5.0-1.1.ipa" class="download-btn" download>Download IPA</a>
-        </div>
-
-        <div class="ipa-card">
-            <h2>ChatGPT</h2>
-            <p>AI-powered chatbot app.</p>
-            <a href="https://raw.githubusercontent.com/coolzyycmon/IPAs/main/ChatGPT_1.0_1750971508.ipa" class="download-btn" download>Download IPA</a>
-        </div>
-
-        <div class="ipa-card">
-            <h2>TrollInstallerX</h2>
-            <p>Utility for installing TrollStore easily.</p>
-            <a href="https://raw.githubusercontent.com/coolzyycmon/IPAs/main/TrollInstallerX.ipa" class="download-btn" download>Download IPA</a>
-        </div>
-
-        <div class="ipa-card">
-            <h2>GTA: San Andreas</h2>
-            <p>Classic Rockstar action-adventure game.</p>
-            <a href="https://file.ipaomtk.com/ipa/GTA-San-Andreas-ipaomtk.com.ipa" class="download-btn" download>Normal</a>
-            <a href="https://s1.ipaomtk.com/ipa/GTA-SA-Original.ipa" class="download-btn" download>Original</a>
-            <a href="https://s1.ipaomtk.com/ipa/GTASA-MOD-IPAOMTK.COM.ipa" class="download-btn" download>Mod</a>
-            <a href="https://file.ipaomtk.com/ipa/GTA-SA-MOD-HD.ipa" class="download-btn" download>HD</a>
-            <a href="https://file.ipaomtk.com/ipa/GTA-SA-Definitive-ipaomtk.com.ipa" class="download-btn" download>Definitive</a>
-        </div>
-
-        <div class="ipa-card">
-            <h2>Shadow Fight 2</h2>
-            <p>Martial arts fighting game with RPG elements.</p>
-            <a href="https://file.ipaomtk.com/ipa/Shadow-Fight-2.ipa" class="download-btn" download>Download IPA</a>
-        </div>
-
-        <div class="ipa-card">
-            <h2>StepsApp Pedometer</h2>
-            <p>Fitness tracker and pedometer app. Version 8.4.4</p>
-            <a href="https://s1.ipaomtk.com/ipa/StepsApp-Pedometer-IPAOMTK.COM.ipa" class="download-btn" download>Download IPA</a>
-        </div>
-
-        <div class="ipa-card">
-            <h2>Spotify Music</h2>
-            <p>Music streaming app with millions of songs.</p>
-            <a href="https://file.ipaomtk.com/ipa/Spotify-ipaomtk.com.ipa" class="download-btn" download>Download IPA</a>
-        </div>
-
-        <!-- Ad Placement 3: Bottom -->
+        <!-- Ad Placement 3 -->
         <div class="ad-container">
             <ins class="adsbygoogle"
                  style="display:block"
@@ -151,7 +153,7 @@
     <script>
         function searchIPA() {
             let input = document.getElementById('searchBar').value.toLowerCase();
-            let cards = document.getElementsByClassName('ipa-card');
+            let cards = document.getElementById('ipa-cards-container').getElementsByClassName('ipa-card');
             for (let i = 0; i < cards.length; i++) {
                 let title = cards[i].getElementsByTagName('h2')[0].innerText.toLowerCase();
                 let desc = cards[i].getElementsByTagName('p')[0].innerText.toLowerCase();
