--- a/index.html
+++ b/index.html
@@ -4,29 +4,90 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GalacticIPA</title>
-
-    <!-- Google AdSense Site Verification -->
-    <meta name="google-site-verification" content="2445144635895709">
-
-    <!-- Google AdSense Script -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2445144635895709"
-     crossorigin="anonymous"></script>
-
     <style>
-        body { font-family: Arial, sans-serif; background-color: #121212; color: #ffffff; margin:0; padding:0; }
-        header { background-color:#1f1f1f; padding:20px; text-align:center; font-size:2em; font-weight:bold; }
-        .container { max-width:900px; margin:40px auto; padding:0 20px; }
-        #searchBar { width:100%; padding:12px; margin-bottom:30px; border-radius:8px; border:none; font-size:1em; }
-        .ipa-card { background-color:#1f1f1f; padding:20px; margin-bottom:20px; border-radius:8px; text-align:center; transition: transform 0.2s; }
-        .ipa-card:hover { transform: scale(1.02); }
-        .ipa-card h2 { margin:0 0 10px 0; }
-        .ipa-card p { margin:0 0 15px 0; font-size:0.9em; color:#bbbbbb; }
-        .download-btn { display:inline-block; margin:5px; text-decoration:none; background-color:#ff3b3f; color:white; padding:10px 20px; border-radius:5px; font-weight:bold; }
-        .download-btn:hover { background-color:#e03236; }
-        .telegram-btn { display:inline-block; margin-top:20px; text-decoration:none; background-color:#0088cc; color:white; padding:12px 25px; border-radius:8px; font-weight:bold; }
-        .telegram-btn:hover { background-color:#0077b5; }
-        footer { text-align:center; padding:20px; color:#888888; background-color:#1f1f1f; margin-top:40px; }
-        .ad-container { margin:30px 0; text-align:center; }
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #121212;
+            color: #ffffff;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #1f1f1f;
+            padding: 20px;
+            text-align: center;
+            font-size: 2em;
+            font-weight: bold;
+        }
+        .container {
+            max-width: 1000px;
+            margin: 40px auto;
+            padding: 0 20px;
+        }
+        #searchBar {
+            width: 100%;
+            padding: 12px;
+            margin-bottom: 30px;
+            border-radius: 8px;
+            border: none;
+            font-size: 1em;
+        }
+        h2.category {
+            margin-top: 40px;
+            border-bottom: 2px solid #ff3b3f;
+            padding-bottom: 5px;
+        }
+        .ipa-card {
+            background-color: #1f1f1f;
+            padding: 20px;
+            margin-bottom: 20px;
+            border-radius: 8px;
+            transition: transform 0.2s;
+        }
+        .ipa-card:hover {
+            transform: scale(1.02);
+        }
+        .ipa-card h3 {
+            margin: 0 0 10px 0;
+        }
+        .ipa-card p {
+            margin: 0 0 15px 0;
+            font-size: 0.9em;
+            color: #bbbbbb;
+        }
+        .download-btn {
+            display: inline-block;
+            margin: 5px;
+            text-decoration: none;
+            background-color: #ff3b3f;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 5px;
+            font-weight: bold;
+        }
+        .download-btn:hover {
+            background-color: #e03236;
+        }
+        .telegram-btn {
+            display: inline-block;
+            margin-top: 20px;
+            text-decoration: none;
+            background-color: #0088cc;
+            color: white;
+            padding: 12px 25px;
+            border-radius: 8px;
+            font-weight: bold;
+        }
+        .telegram-btn:hover {
+            background-color: #0077b5;
+        }
+        footer {
+            text-align: center;
+            padding: 20px;
+            color: #888888;
+            background-color: #1f1f1f;
+            margin-top: 40px;
+        }
     </style>
 </head>
 <body>
@@ -34,116 +95,139 @@
     <div class="container">
         <input type="text" id="searchBar" onkeyup="searchIPA()" placeholder="Search for IPAs...">
 
-        <!-- Ad Placement 1 -->
-        <div class="ad-container">
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="ca-pub-2445144635895709"
-                 data-ad-slot="1111111111"
-                 data-ad-format="auto"
-                 data-full-width-responsive="true"></ins>
-            <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+        <!-- Music & Media -->
+        <h2 class="category">🎵 Music & Media</h2>
+
+        <div class="ipa-card">
+            <h3>YouTube Music</h3>
+            <p>Official YouTube Music app for streaming music and videos.</p>
+            <a href="https://s1.ipaomtk.com/ipa/YouTube-Music-IPAOMTK.COM.ipa" class="download-btn" download>Download IPA</a>
         </div>
 
-        <!-- IPA cards container -->
-        <div id="ipa-cards-container">
-            <div class="ipa-card">
-                <h2>CapCut</h2>
-                <p>Video editor with powerful features for editing, effects, and more.</p>
-                <a href="https://file.ipaomtk.com/ipa/CapCut.ipa" class="download-btn" download>Download v1</a>
-                <a href="https://file.ipaomtk.com/ipa/CapCut-2-IPAOMTK.COM.ipa" class="download-btn" download>Download v2</a>
-            </div>
-
-            <div class="ipa-card">
-                <h2>Minecraft</h2>
-                <p>The legendary block-building survival and adventure game.</p>
-                <a href="https://s1.ipaomtk.com/ipa/Minecraft-IPAOMTK.COM.ipa" class="download-btn" download>Download IPA</a>
-            </div>
-
-            <div class="ipa-card">
-                <h2>Subway Surfers</h2>
-                <p>Endless runner game where you dash through subways and dodge trains.</p>
-                <a href="https://file.ipaomtk.com/ipa/Subway-Surfers-ipaomtk.com.ipa" class="download-btn" download>Download IPA</a>
-            </div>
-
-            <div class="ipa-card">
-                <h2>Scarlet</h2>
-                <p>Advanced IPA installer and app manager.</p>
-                <a href="https://raw.githubusercontent.com/coolzyycmon/IPAs/main/ScarletAlpha.ipa" class="download-btn" download>Download IPA</a>
-            </div>
-
-            <div class="ipa-card">
-                <h2>ESign</h2>
-                <p>IPA signer and sideloading tool with no logs.</p>
-                <a href="https://raw.githubusercontent.com/coolzyycmon/IPAs/main/ESignNoLogs-5.0-1.1.ipa" class="download-btn" download>Download IPA</a>
-            </div>
-
-            <div class="ipa-card">
-                <h2>ChatGPT</h2>
-                <p>AI-powered chatbot app.</p>
-                <a href="https://raw.githubusercontent.com/coolzyycmon/IPAs/main/ChatGPT_1.0_1750971508.ipa" class="download-btn" download>Download IPA</a>
-            </div>
-
-            <div class="ipa-card">
-                <h2>TrollInstallerX</h2>
-                <p>Utility for installing TrollStore easily.</p>
-                <a href="https://raw.githubusercontent.com/coolzyycmon/IPAs/main/TrollInstallerX.ipa" class="download-btn" download>Download IPA</a>
-            </div>
-
-            <div class="ipa-card">
-                <h2>GTA: San Andreas</h2>
-                <p>Classic Rockstar action-adventure game.</p>
-                <a href="https://file.ipaomtk.com/ipa/GTA-San-Andreas-ipaomtk.com.ipa" class="download-btn" download>Normal</a>
-                <a href="https://s1.ipaomtk.com/ipa/GTA-SA-Original.ipa" class="download-btn" download>Original</a>
-                <a href="https://s1.ipaomtk.com/ipa/GTASA-MOD-IPAOMTK.COM.ipa" class="download-btn" download>Mod</a>
-                <a href="https://file.ipaomtk.com/ipa/GTA-SA-MOD-HD.ipa" class="download-btn" download>HD</a>
-                <a href="https://file.ipaomtk.com/ipa/GTA-SA-Definitive-ipaomtk.com.ipa" class="download-btn" download>Definitive</a>
-            </div>
-
-            <div class="ipa-card">
-                <h2>Shadow Fight 2</h2>
-                <p>Martial arts fighting game with RPG elements.</p>
-                <a href="https://file.ipaomtk.com/ipa/Shadow-Fight-2.ipa" class="download-btn" download>Download IPA</a>
-            </div>
-
-            <div class="ipa-card">
-                <h2>StepsApp Pedometer</h2>
-                <p>Fitness tracker and pedometer app. Version 8.4.4</p>
-                <a href="https://s1.ipaomtk.com/ipa/StepsApp-Pedometer-IPAOMTK.COM.ipa" class="download-btn" download>Download IPA</a>
-            </div>
-
-            <div class="ipa-card">
-                <h2>Spotify Music</h2>
-                <p>Music streaming app with millions of songs.</p>
-                <a href="https://file.ipaomtk.com/ipa/Spotify-ipaomtk.com.ipa" class="download-btn" download>Download IPA</a>
-            </div>
+        <div class="ipa-card">
+            <h3>AI Cover & Songs Music AI</h3>
+            <p>Generate AI music covers and songs. Version 4.2.27.</p>
+            <a href="https://file.ipaomtk.com/ipa/AI_Cover_&_Songs_Music_AI-ipaomtk.com.ipa" class="download-btn" download>Download IPA</a>
         </div>
 
-        <!-- Ad Placement 2 -->
-        <div class="ad-container">
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="ca-pub-2445144635895709"
-                 data-ad-slot="2222222222"
-                 data-ad-format="auto"
-                 data-full-width-responsive="true"></ins>
-            <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+        <div class="ipa-card">
+            <h3>TikTok</h3>
+            <p>Short-form video sharing app for fun, trends, and creativity.</p>
+            <a href="https://s1.ipaomtk.com/ipa/TikTok.ipa" class="download-btn" download>Download IPA</a>
         </div>
 
-        <!-- Ad Placement 3 -->
-        <div class="ad-container">
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="ca-pub-2445144635895709"
-                 data-ad-slot="3333333333"
-                 data-ad-format="auto"
-                 data-full-width-responsive="true"></ins>
-            <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+        <div class="ipa-card">
+            <h3>YouTube Premium</h3>
+            <p>Ad-free YouTube experience with background play and premium features.</p>
+            <a href="https://files.onejailbreak.com/YouTubePlus_5.2b3_20.32.4.ipa" class="download-btn" download>Download IPA</a>
         </div>
 
-        <div style="text-align:center;">
+        <div class="ipa-card">
+            <h3>Spotify Music</h3>
+            <p>Music streaming app with millions of songs.</p>
+            <a href="https://file.ipaomtk.com/ipa/Spotify-ipaomtk.com.ipa" class="download-btn" download>Download IPA</a>
+        </div>
+
+        <div class="ipa-card">
+            <h3>MovieBox Pro</h3>
+            <p>Stream movies and TV shows directly to your device.</p>
+            <a href="https://www.movieboxpro.app/ipa" class="download-btn" download>Download IPA</a>
+        </div>
+
+        <!-- Games -->
+        <h2 class="category">🎮 Games</h2>
+
+        <div class="ipa-card">
+            <h3>Minecraft</h3>
+            <p>The legendary block-building survival and adventure game.</p>
+            <a href="https://s1.ipaomtk.com/ipa/Minecraft-IPAOMTK.COM.ipa" class="download-btn" download>Download IPA</a>
+        </div>
+
+        <div class="ipa-card">
+            <h3>Subway Surfers</h3>
+            <p>Endless runner game where you dash through subways and dodge trains.</p>
+            <a href="https://file.ipaomtk.com/ipa/Subway-Surfers-ipaomtk.com.ipa" class="download-btn" download>Download IPA</a>
+        </div>
+
+        <div class="ipa-card">
+            <h3>GTA: San Andreas</h3>
+            <p>Classic Rockstar action-adventure game.</p>
+            <a href="https://file.ipaomtk.com/ipa/GTA-San-Andreas-ipaomtk.com.ipa" class="download-btn" download>Normal</a>
+            <a href="https://s1.ipaomtk.com/ipa/GTA-SA-Original.ipa" class="download-btn" download>Original</a>
+            <a href="https://s1.ipaomtk.com/ipa/GTASA-MOD-IPAOMTK.COM.ipa" class="download-btn" download>Mod</a>
+            <a href="https://file.ipaomtk.com/ipa/GTA-SA-MOD-HD.ipa" class="download-btn" download>HD</a>
+            <a href="https://file.ipaomtk.com/ipa/GTA-SA-Definitive-ipaomtk.com.ipa" class="download-btn" download>Definitive</a>
+        </div>
+
+        <div class="ipa-card">
+            <h3>Shadow Fight 2</h3>
+            <p>Martial arts fighting game with RPG elements.</p>
+            <a href="https://file.ipaomtk.com/ipa/Shadow-Fight-2.ipa" class="download-btn" download>Download IPA</a>
+        </div>
+
+        <div class="ipa-card">
+            <h3>Geometry Dash</h3>
+            <p>Rhythm-based platformer with challenging levels.</p>
+            <a href="https://dl.iosvizor.net/geometry-dash/Geometry-Dash-v2.206-iosvizor.ipa" class="download-btn" download>Download IPA</a>
+        </div>
+
+        <div class="ipa-card">
+            <h3>Diamond Finder for Minecraft</h3>
+            <p>Tool to locate diamonds and resources in Minecraft.</p>
+            <a href="https://github.com/apptesters-org/Repo/releases/download/04-07-2024/DiamondFinder_1.2.15_Premium_%40thisismanpreets_apptesters.org.ipa" class="download-btn" download>Download IPA</a>
+        </div>
+
+        <!-- Tools & Utilities -->
+        <h2 class="category">🛠️ Tools & Utilities</h2>
+
+        <div class="ipa-card">
+            <h3>CapCut</h3>
+            <p>Video editor with powerful features for editing, effects, and more.</p>
+            <a href="https://file.ipaomtk.com/ipa/CapCut.ipa" class="download-btn" download>Download v1</a>
+            <a href="https://file.ipaomtk.com/ipa/CapCut-2-IPAOMTK.COM.ipa" class="download-btn" download>Download v2</a>
+        </div>
+
+        <div class="ipa-card">
+            <h3>Scarlet</h3>
+            <p>Advanced IPA installer and app manager.</p>
+            <a href="https://raw.githubusercontent.com/coolzyycmon/IPAs/main/ScarletAlpha.ipa" class="download-btn" download>Download IPA</a>
+        </div>
+
+        <div class="ipa-card">
+            <h3>ESign</h3>
+            <p>IPA signer and sideloading tool with no logs.</p>
+            <a href="https://raw.githubusercontent.com/coolzyycmon/IPAs/main/ESignNoLogs-5.0-1.1.ipa" class="download-btn" download>Download IPA</a>
+        </div>
+
+        <div class="ipa-card">
+            <h3>ChatGPT</h3>
+            <p>AI-powered chatbot app.</p>
+            <a href="https://raw.githubusercontent.com/coolzyycmon/IPAs/main/ChatGPT_1.0_1750971508.ipa" class="download-btn" download>Download IPA</a>
+        </div>
+
+        <div class="ipa-card">
+            <h3>TrollInstallerX</h3>
+            <p>Utility for installing TrollStore easily.</p>
+            <a href="https://raw.githubusercontent.com/coolzyycmon/IPAs/main/TrollInstallerX.ipa" class="download-btn" download>Download IPA</a>
+        </div>
+
+        <div class="ipa-card">
+            <h3>iSpoofer</h3>
+            <p>Tool for GPS spoofing and game utilities.</p>
+            <a href="https://ispoofer.app/Signed.ipa" class="download-btn" download>Download IPA</a>
+        </div>
+
+        <div class="ipa-card">
+            <h3>StepsApp Pedometer</h3>
+            <p>Fitness tracker and pedometer app. Version 8.4.4.</p>
+            <a href="https://s1.ipaomtk.com/ipa/StepsApp-Pedometer-IPAOMTK.COM.ipa" class="download-btn" download>Download IPA</a>
+        </div>
+
+        <!-- Telegram Request -->
+        <div style="text-align: center;">
             <a href="https://t.me/GalaticIPA" class="telegram-btn">📲 Request IPA on Telegram</a>
         </div>
+
     </div>
 
     <footer>
@@ -153,11 +237,16 @@
     <script>
         function searchIPA() {
             let input = document.getElementById('searchBar').value.toLowerCase();
-            let cards = document.getElementById('ipa-cards-container').getElementsByClassName('ipa-card');
+            let cards = document.getElementsByClassName('ipa-card');
+
             for (let i = 0; i < cards.length; i++) {
-                let title = cards[i].getElementsByTagName('h2')[0].innerText.toLowerCase();
+                let title = cards[i].getElementsByTagName('h3')[0].innerText.toLowerCase();
                 let desc = cards[i].getElementsByTagName('p')[0].innerText.toLowerCase();
-                cards[i].style.display = (title.includes(input) || desc.includes(input)) ? "" : "none";
+                if (title.includes(input) || desc.includes(input)) {
+                    cards[i].style.display = "";
+                } else {
+                    cards[i].style.display = "none";
+                }
             }
         }
     </script>
